# cpp-lib-template

./: .clang-format  LICENSE  README.md
doc/: Doxyfile
examples/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
